--- a/style.css
+++ b/style.css
@@ -1,19 +1,30 @@
 @font-face {
-    font-family: "Roboto";
-    src: url("./fonts/Roboto-Regular.woff2") format("woff2"),
-    url("./fonts/Roboto-Regular.woff") format("woff");
-    font-weight: 400;
+    font-family: "Montserrat";
+    src: url("./fonts/Montserrat-Light.woff2") format("woff2"),
+    url("./fonts/Montserrat-Light.woff") format("woff");
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Roboto Bold";
-    src: url("./fonts/Roboto-Bold.woff2") format("woff2"),
-    url("./fonts/Roboto-Bold.woff") format("woff");
-    font-weight: 700;
+    font-family: "Montserrat";
+    src: url("./fonts/Montserrat-Regular.woff2") format("woff2"),
+    url("./fonts/Montserrat-Regular.woff") format("woff");
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+:root {
+    --color-whitesmoke: #f5f5f5;
+    --color-white: #ffffff;
+    --color-grey: #2c2c2c;
+    --color-beige: #e4cec1;
 }
 
 html {
@@ -21,25 +32,36 @@ html {
 }
 
 .page__body {
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    max-width: 1280px;
 
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    color: #454545;
+    color: var(--color-grey);
+
 }
 
 .main-index {
     flex-grow: 1;
+    display: flex;
 }
 
-.container {
-    margin: 0 auto;
-    width: 1220px;
+.main-index-left {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    padding: 40px;
+}
+
+.main-index-right {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
 }
 
 .title {
@@ -47,19 +69,24 @@ html {
 }
 
 .profile {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    text-align: center;
+}
+
+.profile__figure {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: min-content;
+    margin-bottom: 80px;
 }
 
 .profile__image {
     display: block;
-    width: 40%;
-    height: 45%;
+    width: 310px;
+    height: 310px;
     object-fit: cover;
-    border-bottom-left-radius: 20%;
-    border-top-right-radius: 20%;
+    border-radius: 50%;
+    margin: 0 auto;
 }
 
 .profile__wrap {
@@ -67,27 +94,21 @@ html {
 }
 
 .profile__title {
-    font-size: 60px;
-    line-height: 60px;
-    margin-top: 20%;
-    margin-bottom: 5%;
+    font-size: 50px;
+    line-height: 50px;
+    align-items: center;
+    font-weight: 400;
 }
 
 .profile__subtitle {
     font-size: 36px;
     line-height: 36px;
-    margin-bottom: 5%;
 }
 
 .profile__content {
     margin: 0;
     font-size: 24px;
     line-height: 36px;
-}
-
-.about_me {
-    display: flex;
-    justify-content: space-between;
 }
 
 .contacts_title {
@@ -97,7 +118,7 @@ html {
     border-bottom: 4px solid #454545;
 }
 
-.contacts__list {
+.list {
     margin: 0;
     padding: 0;
     padding-top: 20px;
@@ -110,8 +131,8 @@ html {
     padding: 0;
 }
 
-.contacts {
-    width: 40%;
+.languages {
+    padding: 0;
 }
 
 .contacts__inner {
@@ -176,12 +197,21 @@ html {
     line-height: 24px;
 }
 
-.skills-info {
-    display: flex;
-}
-
 .skills-info__list:not(:last-child) {
     padding-right: 70px;
 }
 
+.projects__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+}
+
+.projects__img {
+    display: block;
+    width: 100%;
+    object-fit: contain;
+    height: max-content;
+    border: 4px solid var(--color-beige);
+}
 
