--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ html {
 }
 
 .page__body {
-    margin: 0 auto;
+    margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    max-width: 1280px;
+    min-width: 1440px;
 
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
@@ -50,11 +50,16 @@ html {
 }
 
 .page__body__inner {
+    margin: 0 auto;
+    max-width: 1280px;
     box-shadow: 0 0 23px 10px rgba(34, 60, 80, 0.1);
 }
 
 .main-index {
     flex-grow: 1;
+}
+
+.main-index__inner {
     display: flex;
 }
 
